<resources>
    <string name="app_name">Kilo Takibi</string>

    <!-- General -->
    <string name="home">Anasayfa</string>
    <string name="graph">Grafik</string>
    <string name="settings">Ayarlar</string>
    <string name="current">Güncel</string>
    <string name="change">Değişim</string>
    <string name="weekly">Haftalık</string>
    <string name="monthly">Aylık</string>
    <string name="weight_string">%skg</string>

    <!-- Auth -->
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>

    <!-- Accessibility -->
    <string name="weight_icon">Kilo İkonu</string>
    <string name="edit_icon">Düzenle İkonu</string>
    <string name="add">Ekle</string>
    <string name="pick_date">Tarih Seç</string>

    <!-- Dialog -->
    <string name="add_a_record">Yeni kayıt ekle</string>
    <string name="weight">Kilo</string>
    <string name="ok">Tamam</string>
    <string name="yes">Evet</string>
    <string name="cancel">İptal</string>
    <string name="update">Güncelle</string>
    <string name="delete">Sil</string>
    <string name="x">x</string>

    <!-- Graph -->
    <string name="one_week">1H</string>
    <string name="one_month">1A</string>
    <string name="three_month">3A</string>
    <string name="one_year">1Y</string>
    <string name="three_year">3Y</string>

    <!-- Comment -->
    <string name="error_weight_already_exist">Bu tarihte veri zaten eklenmiş.</string>
    <string name="delete_description">Bu kaydı silmek istediğinize emin misiniz?</string>
    <string name="delete_completed">Silme işlemi başarıyla tamamlandı.</string>

    <!-- Settings -->
    <string name="dark_mode">Koyu Tema</string>
    <string name="app_language">Uygulama Dili</string>

    <!-- Language -->
    <string-array name="languages">
        <item>English</item>
        <item>Türkçe</item>
    </string-array>
</resources>