<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    tools:context=".ui.view.edit.EditFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintBottom_toBottomOf="@id/tvBtnClose"
        app:layout_constraintEnd_toStartOf="@id/tvBtnClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvBtnClose" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBtnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/x"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/elWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:maxLength="6" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPickDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="?attr/colorPrimary"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="18dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_calendar_outlined"
        app:iconGravity="end"
        app:iconTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/elWeight"
        app:layout_constraintStart_toStartOf="@id/elWeight"
        app:layout_constraintTop_toBottomOf="@id/elWeight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="?attr/colorSurfaceVariant"
        android:text="@string/cancel"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintStart_toStartOf="@id/btnPickDate"
        app:layout_constraintTop_toBottomOf="@id/btnPickDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="?attr/colorError"
        android:text="@string/delete"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/btnPickDate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/btnPickDate"
        app:layout_constraintStart_toEndOf="@id/btnDelete"
        app:layout_constraintTop_toBottomOf="@id/btnPickDate" />
</androidx.constraintlayout.widget.ConstraintLayout>