<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCurrentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/current"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintBottom_toTopOf="@id/tvCurrent"
            app:layout_constraintEnd_toStartOf="@id/verticalDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCurrent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvWeeklyName"
            app:layout_constraintEnd_toStartOf="@id/verticalDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentName" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/verticalDivider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvChange"
            app:layout_constraintStart_toEndOf="@id/tvCurrent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/horizontalDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toTopOf="@id/tvWeeklyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCurrent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvChangeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/change"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintBottom_toTopOf="@+id/tvChange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/verticalDivider"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvMonthlyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/verticalDivider"
            app:layout_constraintTop_toBottomOf="@+id/tvChangeName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWeeklyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/weekly"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintBottom_toTopOf="@id/tvWeekly"
            app:layout_constraintEnd_toStartOf="@id/verticalDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWeekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/verticalDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeeklyName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMonthlyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/monthly"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            app:layout_constraintBottom_toTopOf="@id/tvMonthly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/verticalDivider"
            app:layout_constraintTop_toBottomOf="@+id/tvChange" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMonthly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/verticalDivider"
            app:layout_constraintTop_toBottomOf="@+id/tvMonthlyName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>